fixed spacing; added more keys; added title

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
+
+
 body {
-    background-color: /* #e56438; */ #20034e;
+    background-color: #ff7043;
+    font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    color: white;
 }
 
+body > h1 {
+    margin: 0;
+    font-weight: 450;
+    opacity: 0.85;
+}
+
+body > h1:last-of-type {
+    margin-bottom: 3vh;
+}
 
 
 .key {
@@ -11,28 +24,37 @@ body {
     text-align: center;
     vertical-align: middle;
     font-family: -system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    font-size: 1vw;
+    font-size: 0.9vw;
+    color: black;
     opacity: 0.7;
     display: inline-block;
     margin: 0;
     overflow: hidden;
     flex-direction: column;
     cursor: pointer;
+    border: 1px solid #ff7043;
+    box-sizing: border-box;
+}
+.key > div {
+    line-height: 1.5vw;
 }
 
 .key > p {
-    line-height: 0.75vw;
+    line-height: 1vw;
 }
 
 
 .line {
-    margin: 5px 0 5px 0;
+    line-height: 0vw;
+    font-size: 0;
+    height: 3vw;
+    max-height: 3vw;
+    overflow: visible;
 }
 
 
 .gap {
     display: inline-block;
-    border: 1px solid transparent;
 }
 
 .w-_25 {
@@ -75,6 +97,11 @@ body {
 .w-2_75 {
     width: 8.25vw;
     border-radius: calc(17%/2.75)/17%;
+}
+
+.w-3_5 {
+    width: 10.5vw;
+    border-radius: calc(17%/3.5)/17%;
 }
 
 .w-6_25 {
